--- a/guiplay/icons.qrc
+++ b/guiplay/icons.qrc
@@ -5,5 +5,6 @@
         <file>flip.png</file>
         <file>quit.png</file>
         <file>board.png</file>
+        <file>drop.png</file>
     </qresource>
 </RCC>
